2009-07-16  Ulrich Drepper  <drepper@redhat.com>

	* nscd/cache.c (cache_add): Use atomic_compare_and_exchange_bool_rel
	instead of atomic_compare_and_exchange_bool_acq to ensure pointer
	is written before the list head update.
	Patch by Andreas Schwab <aschwab@redhat.com>.

	    Jakub Jelinek  <jakub@redhat.com>

	* malloc/malloc.c [ATOMIC_FASTBINS] (_int_free): Make check for
	corruption thread-safe.

2009-07-13  Jakub Jelinek  <jakub@redhat.com>

	* include/atomic.h (catomic_compare_and_exchange_val_rel): If arch
	overrides atomic_compare_and_exchange_val_rel, define to
	atomic_compare_and_exchange_val_rel by default, otherwise default
	to catomic_compare_and_exchange_val_acq.
	(catomic_compare_and_exchange_bool_rel): If arch overrides
	atomic_compare_and_exchange_bool_rel, define to
	atomic_compare_and_exchange_bool_rel by default.
	* malloc/malloc.c (_int_free): Revert 2009-07-02 change.
	Use catomic_compare_and_exchange_val_rel instead of
	catomic_compare_and_exchange_val_acq.

2009-07-16  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/ldsodefs.h: Add prototype for
	_dl_higher_prime_number.
	* elf/dl-misc.c (_dl_higher_prime_number): Mark with internal_function.

	* sysdeps/x86_64/dl-trampoline.S (_dl_runtime_profile): Optimize
	restoring of ymm registers a bit.

2009-07-15  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/memcmp.S: New file.

2009-07-15  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86-64/dl-trampoline.h: Remove after integrating code into...
	* sysdeps/x86-64/dl-trampoline.S: ...here.  Rewrite to avoid function
	pointers in writable memory.

2009-07-07  H.J. Lu  <hongjiu.lu@intel.com>

	* config.h.in: Add HAVE_AVX_SUPPORT entry.
	* config.make.in: Add config-cflags-avx entry.
	* configure.in: Substitute libc_cv_cc_avx.
	* elf/Makefile: Add rules to build and run tst-audit4 and tst-audit5.
	* elf/tst-audit4.c: New file.
	* elf/tst-audit5.c: New file.
	* elf/tst-auditmod4a.c: New file.
	* elf/tst-auditmod4b.c: New file.