@@ -543,8 +543,6 @@ next_nip:
       (void) cache_add (req->type, key_copy, req->key_len, &dataset->head,
 			true, db, uid, he == NULL);
 
-      pthread_rwlock_unlock (&db->lock);
-
       /* Mark the old entry as obsolete.  */
       if (dh != NULL)
 	dh->usable = false;
