@@ -1,3 +1,13 @@
+2009-07-16  Petr Baudis  <pasky@suse.cz>
+
+	* nscd/mem.c (mempool_alloc): Fix unlock missing in the else branch.
+	* nscd/aicache.c: Remove bogus db->lock unlock.
+	* nscd/grpcache.c: Likewise.
+	* nscd/hstcache.c: Likewise.
+	* nscd/initgrcache.c: Likewise.
+	* nscd/pwdcache.c: Likewise.
+	* nscd/servicescache.c: Likewise.
+
 2009-07-16  Ulrich Drepper  <drepper@redhat.com>
 
 	* nscd/cache.c (cache_add): Use atomic_compare_and_exchange_bool_rel
@@ -5,6 +15,7 @@
 	is written before the list head update.
 	Patch by Andreas Schwab <aschwab@redhat.com>.
 
+2009-07-16  Ulrich Drepper  <drepper@redhat.com>
 	    Jakub Jelinek  <jakub@redhat.com>
 
 	* malloc/malloc.c [ATOMIC_FASTBINS] (_int_free): Make check for
